--- a/web/src/components/FavoriteButton/FavoriteButton.css
+++ b/web/src/components/FavoriteButton/FavoriteButton.css
@@ -1,11 +1,7 @@
-.favorite-button {
+.favorite-btn {
   position: absolute;
   top: 10px;
   right: 10px;
-}
-
-
-button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -16,10 +12,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+
+.favorite-btn:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+.favorite-btn:focus,
+.favorite-btn:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
