--- a/web/src/components/SearchBar/SearchBar.css
+++ b/web/src/components/SearchBar/SearchBar.css
@@ -1,37 +1,44 @@
-input {
-    width: 70%;
-    padding: 0.5em;;
-    font-size: 1em;
-    font-family: inherit;
-    border-radius: 8px;     
-    border: 1px solid #444444;
-    box-sizing: border-box;
-    background-color: #1a1a1a;
-    color: rgba(255, 255, 255, 0.87);
-    transition: border-color 0.25s;
+form {
+  display: flex;
+  align-items: center;
+  padding: 8px 12px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  min-width: 400px;
+
+  background: transparent;
+  border-radius: 25px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  border: 1px solid rgba(248, 240, 227, 0.3);
+  transition: border-color 0.25s;
 }
 
-input:hover {
+.search-input {
+  border: none;
   outline: none;
-  border-color: #646cff;
-}  
+  font-size: 1rem;
+  padding: 8px;
+  background-color: transparent;
+  width: 100%;
+}
 
+form:hover {
+  border-color: #e8e8e8;
+}
 
-button {
+.search-btn {
+  background-color: transparent;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: inherit;
   cursor: pointer;
-  transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+.search-icon {
+  width: 15px;
+  height: 15px;
 }
