--- a/web/src/components/ErrorBanner/ErrorBanner.css
+++ b/web/src/components/ErrorBanner/ErrorBanner.css
@@ -1,8 +1,31 @@
 .errorMessage {
-  background-color: #eb959c ;
+  background-color: #eb959c;
   color: #7a0814;
   padding: 10px;
   border: 1px solid rgb(243, 158, 166);
   border-radius: 4px;
   margin: 10px 0;
+}
+
+.retry-btn {
+  top: 10px;
+  right: 10px;
+  border-radius: 8px;
+  border: 1px solid rgb(225, 222, 222, 0.3);
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: inherit;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.retry-btn:hover {
+  border-color: #ffffff;
+}
+.retry-btn:focus,
+.retry-btn:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
