--- a/web/src/components/ForecastList/ForecastList.css
+++ b/web/src/components/ForecastList/ForecastList.css
@@ -2,16 +2,28 @@
   padding: 0;
   margin: 0;
   list-style: none;
+  display: flex;
+  max-width: 60%;
+  margin: 0 auto;
 }
 
 .forecast-item {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 8px 12px;
-  border-bottom: 1px solid #ddd;
+  flex-direction: column;
+  justify-content: center;
+  background-color: transparent;
+  border: 1px solid rgba(73, 72, 72, 0.3);
+
+  border-radius: 25px;
+  padding: 20px;
+  width: 12%;
+  height: 130px;
+  margin: 0 auto;
+  color: #ffffff;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  margin-top: 20px;
 }
 
 .forecast-icon {
-  margin-right: 6px;
+  font-size: 2rem;
 }
