--- a/web/src/components/ForecastList/ForecastList.css
+++ b/web/src/components/ForecastList/ForecastList.css
@@ -3,7 +3,7 @@
   margin: 0;
   list-style: none;
   display: flex;
-  max-width: 60%;
+  max-width: 45%;
   margin: 0 auto;
 }
 
@@ -12,15 +12,16 @@
   flex-direction: column;
   justify-content: center;
   background-color: transparent;
-  border: 1px solid rgba(73, 72, 72, 0.3);
-
-  border-radius: 25px;
+  /* border: 1px solid rgba(73, 72, 72, 0.3); */
+  border: 1px solid rgb(225, 222, 222, 0.3);
+  border-radius: 40px;
   padding: 20px;
-  width: 12%;
+  width: 15%;
   height: 130px;
   margin: 0 auto;
   color: #ffffff;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); */
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
   margin-top: 20px;
 }
 
