--- a/web/src/components/ForecastList/ForecastList.css
+++ b/web/src/components/ForecastList/ForecastList.css
@@ -11,18 +11,19 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: transparent;
-  /* border: 1px solid rgba(73, 72, 72, 0.3); */
-  border: 1px solid rgb(225, 222, 222, 0.3);
+  background-color: rgba(19, 114, 181, 0.227);
+  border: 1px solid rgba(73, 72, 72, 0.3);
+  /* border: 1px solid rgb(225, 222, 222, 0.3); */
   border-radius: 40px;
   padding: 20px;
-  width: 15%;
-  height: 130px;
+  width: 18%;
+  height: 150px;
   margin: 0 auto;
   color: #ffffff;
   /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); */
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
   margin-top: 20px;
+  backdrop-filter: blur(10px);
 }
 
 .forecast-icon {
