--- a/web/src/components/ErrorBanner/ErrorBanner.css
+++ b/web/src/components/ErrorBanner/ErrorBanner.css
@@ -1,16 +1,42 @@
-.errorMessage {
+.error-message {
   background-color: #eb959c;
   color: #7a0814;
   padding: 10px;
   border: 1px solid rgb(243, 158, 166);
-  border-radius: 4px;
+  border-radius: 0.5rem;
   margin: 10px 0;
+  width: fit-content;
+  margin: 0 auto;
+}
+
+.error-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 260px;
+  height: 250px;
+  box-sizing: border-box;
+  position: relative;
+
+  background-color: rgba(181, 19, 19, 0.227);
+  border: 1px solid rgba(73, 72, 72, 0.3);
+  border-radius: 25px;
+
+  padding: 20px;
+  color: #ffffff;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.error-text {
+  color: #7a0814;
+  display: block;
+  align-items: center;
 }
 
 .retry-btn {
   top: 10px;
   right: 10px;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   border: 1px solid rgb(225, 222, 222, 0.3);
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -20,6 +46,8 @@
   cursor: pointer;
   transition: border-color 0.25s;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  margin-top: 1rem;
+  color: rgb(27, 51, 78);
 }
 
 .retry-btn:hover {
