--- a/web/src/index.css
+++ b/web/src/index.css
@@ -27,3 +27,52 @@ h1 {
 h3 {
   margin: 0;
 }
+
+.no-favs-text {
+  color: white;
+  text-align: center;
+  margin-top: 20px;
+  font-size: 1.2em;
+  font-style: italic;
+  justify-self: center;
+}
+
+.not-found-page {
+  color: white;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.not-found-page button {
+  top: 10px;
+  right: 10px;
+  border-radius: 0.5rem;
+  border: 1px solid rgb(225, 222, 222, 0.3);
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: inherit;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  margin-top: 1rem;
+  color: rgb(27, 51, 78);
+}
+
+.not-found-page button:hover {
+  border-color: #ffffff;
+}
+.not-found-page button:focus,
+.not-found-page button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+.not-found-page p {
+  margin-bottom: 2rem;
+  cursor: default;
+}
+
+.not-found-page h1 {
+  cursor: default;
+}
