--- a/web/src/components/FavoriteCard/FavoriteCard.css
+++ b/web/src/components/FavoriteCard/FavoriteCard.css
@@ -1,7 +1,18 @@
-.favorite-card {
-  width: 100%;
-  max-height: 250px;
+.favorites-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  margin: 60px auto;
+  padding: 20px;
   box-sizing: border-box;
+  max-width: 1150px;
+}
+
+.favorite-card {
+  width: 260px;
+  box-sizing: border-box;
+  max-height: 250px;
   position: relative;
 
   background-color: rgba(19, 114, 181, 0.227);
@@ -16,17 +27,6 @@
 .favorite-card:hover {
   cursor: pointer;
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
-}
-
-.favorites-grid {
-  width: 80%;
-  display: grid;
-  gap: 20px;
-  /* up to 4 columns; each column min 220px, max 1fr (share remaining space) */
-  grid-template-columns: repeat(4, minmax(220px, 1fr));
-  padding: 20px;
-  box-sizing: border-box;
-  margin: 60px auto;
 }
 
 .current-icon {
