--- a/web/src/components/SearchBar/SearchBar.css
+++ b/web/src/components/SearchBar/SearchBar.css
@@ -3,7 +3,8 @@ form {
   align-items: center;
   padding: 8px 12px;
   margin: 20px auto;
-  max-width: 400px;
+  width: 90%;
+  margin-top: 6rem;
 
   background: transparent;
   border-radius: 25px;
@@ -45,4 +46,16 @@ form:hover {
 .search-icon {
   width: 15px;
   height: 15px;
+}
+
+@media (min-width: 768px) {
+  form {
+    width: 70%;
+  }
+}
+
+@media (min-width: 1124px) {
+  form {
+    max-width: 400px;
+  }
 }
